plugins {
	id 'java'
	id 'org.springframework.boot' version '3.5.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.aiproject'
version = '0.0.1-SNAPSHOT'
description = 'Demo project for Spring Boot'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-web'
	compileOnly 'org.projectlombok:lombok'
	developmentOnly 'org.springframework.boot:spring-boot-devtools'
	annotationProcessor 'org.projectlombok:lombok'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
	
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	
	implementation 'org.springframework.boot:spring-boot-starter-jdbc'
	implementation group:'com.oracle.database.jdbc', name:'ojdbc6', version:'11.2.0.4'
	
	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'	
	
	implementation 'org.springframework.boot:spring-boot-starter-validation'
	
	implementation 'org.springframework.boot:spring-boot-starter-security'
	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
	
    // --- Jackson (JSON 직렬화/역직렬화) ---
    implementation 'com.fasterxml.jackson.core:jackson-annotations:2.17.1'
    implementation 'com.fasterxml.jackson.core:jackson-core:2.17.1'
    implementation 'com.fasterxml.jackson.core:jackson-databind:2.17.1'

   // OAuth2
   implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
   
   //페이 결제하기위한 Spring WebFlux 기반 비동기/논블로킹 웹 애플리케이션을 쉽게 만들도록 도와주는 스타터
   implementation 'org.springframework.boot:spring-boot-starter-webflux'
   
   
   //javaMail
   implementation 'org.springframework.boot:spring-boot-starter-mail'
   
}

tasks.named('test') {
	useJUnitPlatform()
}
